[CRNT-38863] : Fixed the alignment and direction of the collapse and expand arrows.
Bug :CRNT-38863

--- a/skins/modern/src/main/resources/META-INF/xhtml/modern.css
+++ b/skins/modern/src/main/resources/META-INF/xhtml/modern.css
@@ -5526,6 +5526,7 @@ iceRowSelSelectedMouseOver .iceOutTxt{
 	border:none;
 	display: -webkit-box;
 	color: #A69A88;
+	position: relative;
 	/* font-size: 1.33333333em !important; */
 	
 }
@@ -5540,15 +5541,18 @@ iceRowSelSelectedMouseOver .iceOutTxt{
 	font-weight:500;
 	display: -webkit-box;
 	color: #A69A88;
+	position: relative;
 	/* font-size: 1.33333333em !important; */
 }
 
 .icePnlClpsblHdr:before{
     /* background-image: url('./images/flat-icons/panelHeader-triggerCollapse-light_16x22.png') !important; */
     font-family: "FontAwesome";
-    content: "\f0da";
+    content: "\f0d7";
     font-size: 1.33333333em !important;
-    background-position: -4px 5px;   
+    position:absolute;
+    float :left;
+    left: -2px;    
 }
 
 .icePnlClpsblHdr:hover{
@@ -5562,9 +5566,11 @@ iceRowSelSelectedMouseOver .iceOutTxt{
 .icePnlClpsblHdr-dis:before{
    /*  background: url('./images/flat-icons/panelHeader-triggerCollapse-light_16x22.png' ) no-repeat; */
    	font-family: "FontAwesome";
-    content: "\f0da";
+    content: "\f0d7";
     font-size: 1.33333333em !important;
-    background-position: -4px 5px;  
+    position:absolute;
+    float :left;
+    left: -2px;       
 }
 .icePnlClpsblHdr-dis:hover {
     /* background: url('./images/flat-icons/panelHeader-triggerCollapse.png' ) no-repeat; */
@@ -5577,9 +5583,11 @@ iceRowSelSelectedMouseOver .iceOutTxt{
 .icePnlClpsblColpsdHdr:before{
     /* background: url('./images/flat-icons/panelHeader-triggerExpand-light_16x22.png')  no-repeat; */
     font-family: "FontAwesome";
-    content: "\f0d7";
+    content: "\f0da";
     font-size: 1.33333333em !important;
-    background-position: -4px 5px;     
+    position:absolute;
+    float :left;
+    left: -2px;      
 }
 .icePnlClpsblColpsdHdr:hover {
     /* background: url('./images/flat-icons/panelHeader-triggerExpand.png')  no-repeat; */
@@ -5592,9 +5600,11 @@ iceRowSelSelectedMouseOver .iceOutTxt{
 .icePnlClpsblColpsdHdr-dis:before{
     /* background: url('./images/flat-icons/panelHeader-triggerExpand-light_16x22.png')  no-repeat; */
     font-family: "FontAwesome";
-    content: "\f0d7";
+    content: "\f0da";
     font-size: 1.33333333em !important;
-    background-position: -4px 5px;    
+    position:absolute;
+    float :left; 
+    left: -2px;        
 }
 .icePnlClpsblColpsdHdr-dis:hover {
    /*  background: url('./images/flat-icons/panelHeader-triggerExpand.png')  no-repeat; */
